# yeirin-ai

./: .dockerignore  .env.dev  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  pyproject.toml
.github/workflows/: deploy.yml
scripts/: deploy-dev.sh  install-fonts.sh  install-gotenberg.sh  install-libreoffice.sh
tests/unit/: test_assessment_opinion_generator.py  test_conversation_analyzer.py  test_document_models.py  test_document_service.py  test_docx_filler.py  test_government_docx_filler.py  test_integrated_report_models.py  test_integrated_report_service.py  test_pdf_extractor.py  test_recommendation_models.py  test_recommendation_service.py
yeirin_ai/: counsel_request_format.doc  counsel_request_format.docx  counsel_request_formatv2.docx  goverment_doc1.docx  main.py
yeirin_ai/api/routes/: documents.py  editing.py  health.py  integrated_reports.py  kprc.py  recommendations.py
yeirin_ai/core/config/: settings.py
yeirin_ai/core/models/: api.py
yeirin_ai/domain/document/: __init__.py  models.py
yeirin_ai/domain/editing/: __init__.py  models.py
yeirin_ai/domain/institution/: models.py
yeirin_ai/domain/integrated_report/: __init__.py  models.py
yeirin_ai/domain/recommendation/: models.py
yeirin_ai/infrastructure/database/: assessment_repository.py  connection.py  models.py  repository.py  soul_e_connection.py  soul_e_models.py
yeirin_ai/infrastructure/document/: __init__.py  docx_filler.py  government_docx_filler.py  pdf_converter.py
yeirin_ai/infrastructure/llm/: __init__.py  assessment_opinion_generator.py  conversation_analyzer.py  document_summarizer.py  integrated_opinion_generator.py  kprc_vision_extractor.py  openai_client.py  recommender_opinion_generator.py
yeirin_ai/infrastructure/pdf/: __init__.py  downloader.py  extractor.py  image_converter.py  merger.py
yeirin_ai/services/: __init__.py  assessment_data_service.py  document_service.py  editing_service.py  integrated_report_service.py  recommendation_service.py
