[project]
name = "yeirin-ai"
version = "0.1.0"
description = "Yeirin AI Recommendation Service - RAG-based counseling center matching"
readme = "README.md"
authors = [
    { name = "Yeirin Team", email = "sxngt@icloud.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.54.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "greenlet>=3.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    # PDF 처리
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.20",
    "playwright>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yeirin_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["yeirin_ai"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["yeirin_ai"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/main.py",
    "*/core/config/*",
    "*/core/models/*",
    "*/infrastructure/database/connection.py",
    "*/infrastructure/database/models.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
